@@ -243,11 +243,58 @@ Sends a templated email to this user. See C<send_templated_email> in L<Wing> for
 
 Generates a password reset code that is valid for 24 hours and returns it.
 
+=item has_secondary_auth_token ()
+
+A 2 factor authentication token has been verified recently.
+
+=item email_secondary_auth_verification ([redirect])
+
+Send an email to verify a user is who they say they are so we can set a 2 factor auth token.
+
+=over
+
+=item A partial URL within the site to redirect to after authentication.
+
+=back
+
+=item verify_secondary_auth (token)
+
+Check a secondary auth token to see if it is valid, and if it is, generate a secondary auth token.
+
+=over
+
+=item The token generated by email_secondary_auth_verification
+
+=back
+
 =back
 
 =cut
 
+sub has_secondary_auth_token {
+    my $self = shift;
+    return Wing->cache->get('2factor-verified-'.$self->id);
+}
 
+sub email_secondary_auth_verification {
+    my ($self, $redirect) = @_;
+    my $verify = random_string('ssssssss');
+    Wing->cache->set('2factor-verify-'.$self->id, $verify, 60 * 10);
+    eval {
+        $self->send_templated_email('secondary_auth', { token => $verify, redirect => $redirect });
+    };
+    if ($@) {
+        ouch 428, 'We need to send you an email to verify you are who you say you are before displaying the page you requested, but received this error when doing so: '.bleep($@).' Please contact customer service to solve this problem.';
+    }
+}
+
+sub verify_secondary_auth {
+    my ($self, $token) = @_;
+    if (defined $token && $token ne "" && $token eq Wing->cache->get('2factor-verify-'.$self->id)) {
+        return Wing->cache->set('2factor-verified-'.$self->id, 1, 60 * 60 * 24);
+    }
+    return 0;
+}
 
 sub start_session {
     my ($self, $options) = @_;
