@@ -1,0 +1,12 @@
+<p>Please <a href="http://[% sitename %]/account/verify/secondary/auth?token=[% token %]&redirect=[% redirect %]">click here</a> to confirm your identity.</p>
+
+<p><b>NOTE:</b> The link contained in this email is only valid for the next 10 minutes.</p>
+
+<h4>Why is this needed?</h4>
+<p>
+    Some actions on our site require additional authentication to make your data more secure.
+    This way we are sure that data such as your password, address, etc are not ever displayed
+    to anyone but you.
+</p>
+
+<p>If you did not request this verification, you should probably change your password.</p>
