@@ -1,0 +1,13 @@
+Please click the link below to confirm your identity.
+
+http://[% sitename %]/account/verify/secondary/auth?token=[% token %]&redirect=[% redirect %]
+
+NOTE: The link contained in this email is only valid for the next 10 minutes.
+
+WHY IS THIS NEEDED?
+
+    Some actions on our site require additional authentication to make your data more secure.
+    This way we are sure that data such as your password, address, etc are not ever displayed
+    to anyone but you.
+
+If you did not request this verification, you should probably change your password.
